--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
         "google/apiclient": "^2.12",
         "php": "^8.1",
         "google/analytics-data": "^0.9.0",
-        "google/gax": "^1.18"
+        "google/gax": "^1.18",
+        "google/common-protos": "^1.3.1||^2.0||^3.0",
+        "google/longrunning": "^0.2",
+        "grpc/grpc": "^1.13",
+        "google/protobuf": "^3.21.4"
     },
     "license": "MIT",
     "autoload": {
