--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,9 @@
         "google/common-protos": "^1.3.1||^2.0||^3.0",
         "google/longrunning": "^0.2",
         "grpc/grpc": "^1.13",
-        "google/protobuf": "^3.21.4",
+        "google/protobuf": "^3.21",
         "google/cloud-core": "^v1.48.1",
-        "google/grpc-gcp": "^0.2.1",
-        "google/protobuf": "^v4.0.0RC2"
+        "google/grpc-gcp": "^0.2.1"
     },
     "license": "MIT",
     "autoload": {
