--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "zfhassaan\\genlytics\\Provider\\AnalyticsServiceProvider"
+                "zfhassaan\\genlytics\\provider\\AnalyticsServiceProvider"
             ],
             "aliases": {
                 "genlytics": "zfhassaan\\genlytics\\Facades\\AnalyticsFacade"
