feat: Complete package rewrite with SOLID principles, Repository pattern, Events, and performance optimizations
- Implemented SOLID principles throughout the codebase
- Added Repository pattern with AnalyticsRepository
- Created Event-driven architecture (4 event types)
- Implemented intelligent caching with automatic refresh
- Added background job processing for non-blocking requests
- Created real-time update system with automatic scheduling
- Fixed critical bugs (typos, method names, namespace issues)
- Enhanced error handling and logging
- Added Artisan command for cache management
- Improved data transformation with better error handling
- Updated configuration with new options
- Maintained full backward compatibility
- Added comprehensive documentation (ARCHITECTURE.md, MIGRATION.md, REWRITE_SUMMARY.md)

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
                 "zfhassaan\\genlytics\\provider\\AnalyticsServiceProvider"
             ],
             "aliases": {
-                "genlytics": "zfhassaan\\genlytics\\Facades\\AnalyticsFacade"
+                "genlytics": "zfhassaan\\genlytics\\facades\\AnalyticsFacade"
             }
         }
     },
