Enhance composer configuration and update README for Genlytics package
- Added autoload-dev section for test classes in composer.json.
- Updated require-dev dependencies to include orchestra/testbench, phpunit, and mockery.
- Modified composer.lock to reflect updated package versions and dependencies.
- Improved README with detailed installation instructions, environment variable setup, and usage examples.
- Added sections for caching, background jobs, and real-time updates to enhance user experience and performance.
- Included test case publishing instructions and advanced features for better developer guidance.

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,16 @@
             "zfhassaan\\genlytics\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "zfhassaan\\genlytics\\Tests\\": "tests/"
+        }
+    },
+    "require-dev": {
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^10.0",
+        "mockery/mockery": "^1.5"
+    },
     "authors": [
         {
             "name": "Hassaan Ali",
@@ -43,6 +53,8 @@
         ],
         "post-install-cmd": [
             "echo 'Thank you for installing this Genlytics.'"
-        ]
+        ],
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-html coverage"
     }
 }
