--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,23 +17,34 @@ jobs:
       fail-fast: false
       matrix:
         php: [8.1, 8.2, 8.3]
-        laravel: [10.*, 11.*, 12.*]
+        laravel: [10.*, 11.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
             carbon: ^2.63
           - laravel: 11.*
-            testbench: 9.*
+            testbench: ^9.2
             carbon: ^3.0
-          - laravel: 12.*
-            testbench: 10.*
-            carbon: ^3.0
+
         exclude:
+          - php: 8.2
+            laravel: 10.*
+          - php: 8.3
+            laravel: 10.*
+          - php: 8.3
+            laravel: 11.*
+          - php: 8.1
+            laravel: 11.*
+      
+          - php: 8.2
+            laravel: 11.*
+
           - laravel: 11.*
             php: 8.1
-          - laravel: 12.*
-            php: 8.1
+
+          - laravel: 11.*
+            php: 8.2
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
