--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         php: [8.1, 8.2, 8.3]
-        laravel: [10.*, 11.*]
-        dependency-version: [prefer-lowest, prefer-stable]
+        laravel: [10.*, 11.*, 12.*]
+        dependency-version: [prefer-stable]
         include:
           - laravel: 10.*
             testbench: 8.*
