--- a/.github/workflows/php-cs-fixer.yml
+++ b/.github/workflows/php-cs-fixer.yml
@@ -1,23 +1,25 @@
 name: Check & fix styling
 
-on: [ push ]
+on: [push]
 
 jobs:
   php-cs-fixer:
     runs-on: ubuntu-latest
 
     steps:
-      -   name: Checkout code
-          uses: actions/checkout@v2
-          with:
-            ref: ${{ github.head_ref }}
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      -   name: Run PHP CS Fixer
-          uses: docker://oskarstark/php-cs-fixer-ga
-          with:
-            args: --config=.php-cs-fixer.dist.php --allow-risky=yes
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: 8.1
+          tools: php-cs-fixer
 
-      -   name: Commit changes
-          uses: stefanzweifel/git-auto-commit-action@v4
-          with:
-            commit_message: Fix styling
+      - name: Run PHP CS Fixer
+        run: php-cs-fixer fix --config=.php-cs-fixer.dist.php --allow-risky=yes
+
+      - name: Commit changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: Fix styling
