--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,31 +20,36 @@ jobs:
         laravel: [10.*, 11.*, 12.*]
         dependency-version: [prefer-stable]
         include:
-          - laravel: 10.*
-            testbench: 8.*
-            carbon: ^2.63
-          - laravel: 11.*
-            testbench: ^9.2
-            carbon: ^3.0
+        - laravel: 10.*
+          testbench: 8.*
+          carbon: ^2.63
+
+        - laravel: 11.*
+          testbench: ^9.2
+          carbon: ^3.0
+
+        - laravel: 12.*
+          testbench: ^10.0
+          carbon: ^3.0
+
 
         exclude:
-          - php: 8.2
-            laravel: 10.*
-          - php: 8.3
-            laravel: 10.*
-          - php: 8.3
-            laravel: 11.*
-          - php: 8.1
-            laravel: 11.*
-      
-          - php: 8.2
-            laravel: 11.*
+        # Laravel 10 supports PHP 8.1 only (per your policy)
+        - php: 8.2
+          laravel: 10.*
+        - php: 8.3
+          laravel: 10.*
 
-          - laravel: 11.*
-            php: 8.1
+        # Laravel 11 supports PHP 8.2+
+        - php: 8.1
+          laravel: 11.*
 
-          - laravel: 11.*
-            php: 8.2
+        # Laravel 12 supports PHP 8.3 only
+        - php: 8.1
+          laravel: 12.*
+        - php: 8.2
+          laravel: 12.*
+
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }}
 
